# coder_gan

./: .claudeignore  .gitignore  .markdownlint.json  AGENTS.md  CLAUDE.md  Makefile  README.md
.claude/: settings.json
.codex/: config.toml
.github/skills/ask-orchestrator-agents/: SKILL.md  examples.md
.github/skills/prd-creation/: SKILL.md
.orchestrator/: agents.toml
.orchestrator/prompts/: coder-worktree.md  coder.md  reviewer-worktree.md  reviewer.md  reviewer_status_check.md  tester-worktree.md  tester.md
ai_implementation/: slack_setup_guide.md  step1_brainstorming.md  step2_linux_compatibility_prd.md  step3_gemini_cli_support.md  step4_slack_agent.md  step5_timer_forced_interrupts.md
example_project/: .cursorignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
example_project/.claude/: settings.local.json
example_project/.cursor/: cli-config.json
example_project/.cursor/rules/: coder.mdc
example_project/.github/: copilot-instructions.md
example_project/.orchestrator/: agents.toml
example_project/.orchestrator/prompts/: coder-dist.md  coder-graph.md  coder-resolver.md  coder-temp.md  reviewer.md  tester-dist.md  tester-graph.md  (+2 more)
example_project/src/: lib.rs  main.rs
orchestrator/: Cargo.toml
orchestrator/src/: config.rs  injector.rs  lib.rs  logger.rs  main.rs  menu.rs  scope.rs  session.rs  slack.rs  spike.rs  supervisor.rs  watcher.rs  worktree.rs
orchestrator/tests/: config_tests.rs  gemini_warnings_tests.rs  injector_tests.rs  logger_tests.rs  scope_tests.rs  spike_tests.rs  supervisor_tests.rs  watcher_tests.rs  worktree_tests.rs
(+8 files in other folders)
