[package]
name = "orchestrator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
toml = "0.8"

# Slack agent dependencies (feature-gated)
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
url = { version = "2", optional = true }
futures-util = { version = "0.3", optional = true }

[features]
default = []
slack = ["tokio-tungstenite", "reqwest", "url", "futures-util"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
